--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -4,7 +4,7 @@
 parameters:
     database_host: 127.0.0.1
     database_port: ~
-    database_name: backfront
+    database_name: curso_backfront
     database_user: root
     database_password: ~
     # You should uncomment this if you want to use pdo_sqlite
