--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,6 @@
+#app:
+#    resource: '@AppBundle/Resources/Config/Routing/default.yml'
+#    prefix: /
 app:
-    resource: '@AppBundle/Resources/Config/Routing/default.yml'
-    prefix: /
+    resource: "@AppBundle/Controller/"
+    type:     annotation
