--- a/src/AppBundle/Resources/Config/Routing/task.yml
+++ b/src/AppBundle/Resources/Config/Routing/task.yml
@@ -12,3 +12,18 @@ task_list:
     path: /list
     defaults: { _controller: "AppBundle:Task:tasks" }
     methods: POST
+
+task_detail:
+    path: /detail/{id}
+    defaults: { _controller: "AppBundle:Task:task", id:null }
+    methods: POST
+
+task_search:
+    path: /search/{search}
+    defaults: { _controller: "AppBundle:Task:search", search:null }
+    methods: POST
+
+task_remove:
+    path: /remove/{id}
+    defaults: { _controller: "AppBundle:Task:remove", id:null }
+    methods: POST
